--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.jpa.show-sql=true
 spring.output.ansi.enabled=always
 spring.jpa.open-in-view=false
 
-
+#comment
 
 
 spring.mail.host=smtp.gmail.com
