--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,8 +9,7 @@ spring.jpa.show-sql=true
 spring.output.ansi.enabled=always
 spring.jpa.open-in-view=false
 
-#comment
-
+#comment123
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
